[package]
name = "flat-manager"
version = "0.3.7"
authors = ["Alexander Larsson <alexander.larsson@gmail.com>"]
license = "MIT OR Apache-2.0"
default-run = "flat-manager"

[lib]
name = "flatmanager"
path = "src/lib.rs"

[dependencies]
env_logger = "0.5"

actix = "0.8"
actix-codec = "0.1.2"
actix-files = "0.1"
actix-http = "0.2"
actix-multipart = "0.1"
actix-net = "0.2"
actix-service = "0.4"
actix-web = "1.0"
actix-web-actors = "1.0"
argparse = "0.2.2"
askama = "0.7"
awc = "0.2"
base64 = "0.9"
byteorder = "1.3"
bytes = "0.4"
chrono = { version = "0.4.6", features = ["serde"] }
diesel = { version = "^1.3.0", features = ["postgres", "chrono", "serde_json", "r2d2"] }
diesel_migrations = { version = "^1.3.0" }
dotenv = "0.10"
failure = "0.1.2"
filetime = "0.2"
futures = "0.1"
futures-fs = "0.0"
futures-locks = "0.3"
hex = "0.3"
jsonwebtoken = "5"
libc = "0.2"
log = "0.4"
mpart-async = "0.2"
num_cpus = "1.0"
r2d2 = "0.8"
rand = "0.6"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tempfile = "3.0"
time = "0.1"
tokio = "0.1"
tokio-process = "0.2"
tokio-signal = "0.2"
walkdir = "2"

[patch.crates-io]
# Work around bug: https://github.com/actix/actix-web/pull/1189
actix-multipart = { git = 'https://github.com/alexlarsson/actix-web/', branch = 'fix-multipart-boundary' }
