[package]
name = "flat-manager"
version = "0.4.3"
authors = ["Alexander Larsson <alexander.larsson@gmail.com>"]
license = "MIT OR Apache-2.0"
default-run = "flat-manager"
edition = "2021"

[lib]
name = "flatmanager"
path = "src/lib.rs"

[dependencies]
env_logger = "0.11"

actix = "0.8"
actix-codec = "0.1.2"
actix-files = "0.1"
actix-http = "0.2"
actix-multipart = "0.1.5"
actix-net = "0.2"
actix-service = "0.4"
actix-web = "1.0"
actix-web-actors = "1.0"
argparse = "0.2.2"
askama = "0.12"
awc = "0.2"
base64 = "0.22"
byteorder = "1.3"
bytes = "0.4"
chrono = { version = "0.4.6", features = ["serde"] }
diesel = { version = "2.0", features = ["postgres", "chrono", "serde_json", "r2d2"] }
diesel_migrations = { version = "2.0" }
dotenv = "0.15"
elementtree = "1.2"
failure = "0.1.2"
filetime = "0.2"
flate2 = "1.0"
futures = "0.1"
futures3 = { package = "futures", version = "0.3", features = ["compat"] }
futures-fs = "0.0"
futures-locks = "0.3"
hex = "0.4"
jwt = {package = "jsonwebtoken", version = "9.3"}
libc = "0.2"
log = "0.4"
mpart-async = "0.2"
num_cpus = "1.0"
libostree = { package = "ostree", version = "0.19", features = ["v2021_5"] }
r2d2 = "0.8"
rand = "0.8"
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tempfile = "3.0"
time = "0.1"
tokio = { version = "1.18", features = ["time", "macros", "rt", "rt-multi-thread"] }
tokio-compat = { version = "0.1", features = ["rt-full"] }
tokio-process = "0.2"
tokio-signal = "0.2"
walkdir = "2"
