[package]
name = "flat-manager"
version = "0.5.0-rc.1"
authors = ["Alexander Larsson <alexander.larsson@gmail.com>"]
license = "MIT OR Apache-2.0"
default-run = "flat-manager"
edition = "2021"

[lib]
name = "flatmanager"
path = "src/lib.rs"

[dependencies]
env_logger = "0.11"

actix = "0.13"
actix-files = "0.6"
actix-http = "3"
actix-multipart = "0.7"
actix-service = "2"
actix-web = "4"
askama = "0.12"
base64 = "0.22"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "2.0", features = ["postgres", "chrono", "serde_json", "r2d2"] }
diesel_migrations = { version = "2.0" }
dotenv = "0.15"
filetime = "0.2"
flate2 = "1.0"
hex = "0.4"
jwt = {package = "jsonwebtoken", version = "9.3"}
libc = "0.2"
log = "0.4"
libostree = { package = "ostree", version = "0.19", features = ["v2021_5"] }
r2d2 = "0.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tempfile = "3.0"
thiserror = "2"
tokio = { version = "1.18", features = ["time", "macros", "rt", "rt-multi-thread", "process", "signal"] }
walkdir = "2"
futures = "0.3"
pin-project-lite = "0.2.17"
clap = { version = "4.5.60", features = ["derive"] }
reqwest = { version = "0.13.2", features = ["json", "multipart", "gzip", "stream"] }
