[package]
name = "flat-manager-client"
version = "0.5.0-rc.3"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
flat-manager-common = { path = "../common" }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5.60", features = ["derive"] }
env_logger = "0.11"
flate2 = "1.0"
hex = "0.4"
libostree = { package = "ostree", version = "0.20.5", features = ["v2021_5"] }
log = "0.4"
reqwest = { version = "0.13.2", features = ["json", "multipart", "gzip", "stream"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
thiserror = "2"
tokio = { version = "1.18", features = ["time", "macros", "rt", "rt-multi-thread"] }
