[package]
name = "flat-manager-common"
version = "0.5.1"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
base64 = "0.22"
hex = "0.4"
libostree = { package = "ostree", version = "0.20.5", features = ["v2021_5"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
thiserror = "2"
walkdir = "2"
